--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "university-management-api-gateway",
   "version": "1.0.0",
-  "repository": "https://github.com/Programming-Hero-Next-Level-Development/university-management-api-gateway.git",
-  "author": "Programming Hero",
+  "repository": "https://github.com/abrakib942/university-management-api-gateway.git",
+  "author": "AB Rakib",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' -T ./src/server.ts",
+    "start": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec ts-node -T ./src/server.ts",
     "build": "tsc"
   },
   "dependencies": {
